# esp32-openthread

./: .gitignore  CMakeLists.txt  README.rst  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  app_rpc.c  app_rpc.h  app_settings.c  app_settings.h  app_state.c  app_state.h
pipelines/: cbor-to-lightdb.yml
